#18 fix stream in DepartmentServiceImpl and EmployeeServiceImpl